# rpi_system_info

./: .gitignore  LICENSE  Makefile  README.md  env.example  main.py  mypy.ini  pyproject.toml  requirements.txt  run.sh
libs/: cls_utils.py  log_utils.py  logging_utils.py  pi_info.py  pi_system_info.py  rpi_system_info.py
static/css/: pi.css  styles.css  toggle.css
static/js/: toggle.js
templates/: error.html  index.html  system_action_pending.html
