[project]
name = "rpi_system_info"
version = "1.0.0"
description = "Python library for monitoring Raspberry Pi system information"
authors = [
    {name = "Nizam Keramov", email = "keramov.nizam@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytz == 2025.2",
    "Flask == 3.1.1",
    "click == 8.2.1",
    "Jinja2 == 3.1.6",
    "Werkzeug == 3.1.3",
    "colorama == 0.4.6",
    "gunicorn == 23.0.0",
    "cachelib == 0.13.0",
    "Flask_caching == 2.3.1",
    "python-dotenv == 1.1.0"
]
keywords = [ 
    "rpi",
    "raspberrypi",
    "raspberry-pi",
    "raspberry-pi-projects",
    "python",
    "flask",
    "system-info",
    "system-monitoring",
    "hardware-monitoring"
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]

[project.urls]
Repository = "https://github.com/Nkeramov/rpi_system_info"
"Bug Tracker" = "https://github.com/Nkeramov/rpi_system_info/issues"

[build-system]
requires = ["setuptools>=78.1.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "mypy==1.18.2",
    "ruff==0.4.4",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = [
    "static*",
    "templates*",
    "tests*",
    "docs*",
    "*.egg-info*",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff]
line-length = 120
target-version = "py311"
